# dataPulse

./: .gitignore  LICENSE  README.md  doc.ps1  main.py  mkdocs.yml  project.md  pydoc-markdown.yml  pyproject.toml  run.ps1  runWeb.ps1
.streamlit/: config.toml
changes/20260205-1/: implementation_plan.md  task.md  walkthrough.md
changes/20260205-2/: implementation_plan.md  task.md  walkthrough.md
changes/20260206-1/: implementation_plan.md  task.md  walkthrough.md
docs/: index.md
docs/api/: app.md
src/: app.py  main.py
src/core/: config.py  database.py  engine.py
src/pages/: assets.py  dashboard.py  history.py  home.py  insights.py  process.py  query.py  search.py  statistics.py  system.py  workbench.py
src/ui/: components.py  status_bar.py
src/utils/: io_handler.py  logger.py  metrics.py
