[project]
name = "datapulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "duckdb>=1.4.4",
    "fastapi>=0.128.0",
    "fastexcel>=0.19.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.53.1",
    "streamlit-searchbox>=0.1.24",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pydoc-markdown>=4.8.2",
    "schemathesis>=4.9.5",
]

[tool.pydoc-markdown]
loaders = [{type = "python"}]
processors = [{type = "filter"}, {type = "smart"}]
renderer = {type = "mkdocs", output_directory = "docs/api"}
